--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,7 +1,8 @@
-<mvc:View controllerName="zcicdfiori.controller.View1"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+<mvc:View controllerName="zcicdfiori.controller.View1" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <Text id="txt" text="v2 text" />
+            <Button id="btn" text="v2 BUTTON" />
+        </content>
     </Page>
 </mvc:View>
